// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checked 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-invalid="false"
    checked
    id="<removed>"
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Controlled 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-invalid="false"
      checked
      id="<removed>"
      role="switch"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Varsler
    </label>
  </ds-field>
  <p data-variant="default">
    Velg hvilke typer varsler du ønsker å motta.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-invalid="false"
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Lydvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-invalid="false"
      checked
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Epostvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-invalid="false"
      id="<removed>"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Popup-varsler
    </label>
  </ds-field>
</fieldset>
`;

exports[`Description 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-describedby="<removed>"
    aria-invalid="false"
    checked
    id="<removed>"
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Åpen prøve
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Prøven er åpen for alle som ønsker å delta.
  </div>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-invalid="false"
    disabled
    id="<removed>"
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Disabled switch
  </label>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-invalid="false"
    id="<removed>"
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Varsler
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="false"
      checked
      id="<removed>"
      role="switch"
      type="checkbox"
      value="lydvarsler"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Lydvarsler
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Spill av lyd når et varsel mottas.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="false"
      id="<removed>"
      role="switch"
      type="checkbox"
      value="popup-varsler"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Popup-varsler
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Vis popup-varsler på skjermen.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="false"
      id="<removed>"
      role="switch"
      type="checkbox"
      value="email-varsler"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      E-postvarsler
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Tillat e-postvarsler for viktige oppdateringer.
    </div>
  </ds-field>
</fieldset>
`;

exports[`Group End 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Innstillinger som gjelder hele systemet.
  </p>
  <ds-field
    data-clickdelegatefor="<removed>"
    data-position="end"
  >
    <input
      aria-invalid="false"
      checked
      id="<removed>"
      role="switch"
      type="checkbox"
      value="mork-modus"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Mørk modus
    </label>
  </ds-field>
  <ds-field
    data-clickdelegatefor="<removed>"
    data-position="end"
  >
    <input
      aria-invalid="false"
      id="<removed>"
      role="switch"
      type="checkbox"
      value="automatiske-oppdateringer"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Automatiske oppdateringer
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-invalid="false"
    id="<removed>"
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    aria-invalid="false"
    id="<removed>"
    readonly
    role="switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Read-only switch
  </label>
</ds-field>
`;

exports[`Switch In Color Context 1`] = `
<div
  data-color="accent"
  data-variant="tinted"
>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      aria-describedby="<removed>"
      aria-invalid="false"
      checked
      id="<removed>"
      role="switch"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Description
    </div>
  </ds-field>
</div>
`;
